--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<img src="https://i.pinimg.com/originals/88/82/bc/8882bcf327896ab79fb97e85ae63a002.gif" />
+<html>
+<head>
+</head>  
+<body>
+  <div class="your-class">
+    <div>your content</div>
+    <div>your content</div>
+    <div>your content</div>
+  </div>
+</body>  
+</html>
