--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <div>your content</div>
     <div>your content</div>
   </div>
+  
+  
+  <script type="text/javascript" src="/js/jquery/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="/js/jquery/jquery-migrate-1.2.1.min.js"></script>
 </body>  
 </html>
