--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   
   <script type="text/javascript" src="/js/jquery/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="/js/jquery/jquery-migrate-1.2.1.min.js"></script>
+  <script type="text/javascript" src="/js/slick/slick.min.js"></script>
+
 </body>  
 </html>
