--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <head>
 </head>  
 <body>
-  <div class="your-class">
+  <div class="autoplay">
+    <div>your content</div>
+    <div>your content</div>
+    <div>your content</div>
+    <div>your content</div>
+    <div>your content</div>
     <div>your content</div>
     <div>your content</div>
     <div>your content</div>
@@ -12,6 +17,13 @@
   <script type="text/javascript" src="/js/jquery/jquery-1.11.0.min.js"></script>
   <script type="text/javascript" src="/js/jquery/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="/js/slick/slick.min.js"></script>
-
+  <script type="text/javascript">
+    $('.autoplay').slick({
+      slidesToShow: 3,
+      slidesToScroll: 1,
+      autoplay: true,
+      autoplaySpeed: 2000,
+    });
+  </script>
 </body>  
 </html>
