--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <body>
   <div class="autoplay">
     <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
+    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
+    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
+    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
   </div>
   
   
@@ -12,7 +15,7 @@
   <script type="text/javascript" src="/js/slick/slick.min.js"></script>
   <script type="text/javascript">
     $('.autoplay').slick({
-      slidesToShow: 3,
+      slidesToShow:2,
       slidesToScroll: 1,
       autoplay: true,
       autoplaySpeed: 2000,
