--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 </head>  
 <body>
   <div class="autoplay">
-    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
-    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
-    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
-    <div><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg"/></div>
+    <div>Em chao anh</div>
+    <div>Em chao anh</div>
+    <div>Em chao anh</div>
+    <div>Em chao anh</div>
+    <div>Em chao anh</div>
   </div>
   
   
