--- a/index.html
+++ b/index.html
@@ -4,127 +4,196 @@
     <script src="/js/slick/slick.js"></script>
     <script src="/js/bootstrap/bootstrap.min.js"></script>
     <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <style>
       h2{
-  text-align:center;
-  padding: 20px;
-}
-/* Slider */
+          text-align:center;
+          padding: 20px;
+        }
+        /* Slider */
 
-.slick-slide {
-    margin: 0px 20px;
-}
+        .slick-slide {
+            margin: 0px 20px;
+        }
 
-.slick-slide img {
-    width: 100%;
-}
+        .slick-slide img {
+            width: 100%;
+        }
 
-.slick-slider
-{
-    position: relative;
-    display: block;
-    box-sizing: border-box;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-            user-select: none;
-    -webkit-touch-callout: none;
-    -khtml-user-select: none;
-    -ms-touch-action: pan-y;
-        touch-action: pan-y;
-    -webkit-tap-highlight-color: transparent;
-}
+        .slick-slider
+        {
+            position: relative;
+            display: block;
+            box-sizing: border-box;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+                    user-select: none;
+            -webkit-touch-callout: none;
+            -khtml-user-select: none;
+            -ms-touch-action: pan-y;
+                touch-action: pan-y;
+            -webkit-tap-highlight-color: transparent;
+        }
 
-.slick-list
-{
-    position: relative;
-    display: block;
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
-}
-.slick-list:focus
-{
-    outline: none;
-}
-.slick-list.dragging
-{
-    cursor: pointer;
-    cursor: hand;
-}
+        .slick-list
+        {
+            position: relative;
+            display: block;
+            overflow: hidden;
+            margin: 0;
+            padding: 0;
+        }
+        .slick-list:focus
+        {
+            outline: none;
+        }
+        .slick-list.dragging
+        {
+            cursor: pointer;
+            cursor: hand;
+        }
 
-.slick-slider .slick-track,
-.slick-slider .slick-list
-{
-    -webkit-transform: translate3d(0, 0, 0);
-       -moz-transform: translate3d(0, 0, 0);
-        -ms-transform: translate3d(0, 0, 0);
-         -o-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
-}
+        .slick-slider .slick-track,
+        .slick-slider .slick-list
+        {
+            -webkit-transform: translate3d(0, 0, 0);
+               -moz-transform: translate3d(0, 0, 0);
+                -ms-transform: translate3d(0, 0, 0);
+                 -o-transform: translate3d(0, 0, 0);
+                    transform: translate3d(0, 0, 0);
+        }
 
-.slick-track
-{
-    position: relative;
-    top: 0;
-    left: 0;
-    display: block;
-}
-.slick-track:before,
-.slick-track:after
-{
-    display: table;
-    content: '';
-}
-.slick-track:after
-{
-    clear: both;
-}
-.slick-loading .slick-track
-{
-    visibility: hidden;
-}
+        .slick-track
+        {
+            position: relative;
+            top: 0;
+            left: 0;
+            display: block;
+        }
+        .slick-track:before,
+        .slick-track:after
+        {
+            display: table;
+            content: '';
+        }
+        .slick-track:after
+        {
+            clear: both;
+        }
+        .slick-loading .slick-track
+        {
+            visibility: hidden;
+        }
 
-.slick-slide
-{
-    display: none;
-    float: left;
-    height: 100%;
-    min-height: 1px;
-}
-[dir='rtl'] .slick-slide
-{
-    float: right;
-}
-.slick-slide img
-{
-    display: block;
-}
-.slick-slide.slick-loading img
-{
-    display: none;
-}
-.slick-slide.dragging img
-{
-    pointer-events: none;
-}
-.slick-initialized .slick-slide
-{
-    display: block;
-}
-.slick-loading .slick-slide
-{
-    visibility: hidden;
-}
-.slick-vertical .slick-slide
-{
-    display: block;
-    height: auto;
-    border: 1px solid transparent;
-}
-.slick-arrow.slick-hidden {
-    display: none;
-}
+        .slick-slide
+        {
+            display: none;
+            float: left;
+            height: 100%;
+            min-height: 1px;
+        }
+        [dir='rtl'] .slick-slide
+        {
+            float: right;
+        }
+        .slick-slide img
+        {
+            display: block;
+        }
+        .slick-slide.slick-loading img
+        {
+            display: none;
+        }
+        .slick-slide.dragging img
+        {
+            pointer-events: none;
+        }
+        .slick-initialized .slick-slide
+        {
+            display: block;
+        }
+        .slick-loading .slick-slide
+        {
+            visibility: hidden;
+        }
+        .slick-vertical .slick-slide
+        {
+            display: block;
+            height: auto;
+            border: 1px solid transparent;
+        }
+        .slick-arrow.slick-hidden {
+            display: none;
+        }
+
+        * {
+          box-sizing: border-box;
+        }
+        .profile {
+          position: relative;
+          background: var(--backgroundColor);
+          color: var(--foregroundColor);
+          box-shadow: 0 3px 15px rgba(51, 51, 51, 0.2);
+          border-radius: 10px;
+          transition: 0.2s ease;
+        }
+        .profile__image img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+        .profile a:hover {
+          top: 0;
+          box-shadow: none;
+          background: var(--primaryShade4);
+        }
+        .profile a:active, .profile a:focus {
+          top: 0;
+          box-shadow: none;
+          background: var(--primaryShade5);
+        }
+        .profile-bigimg {
+          display: grid;
+          grid-template-columns: repeat(3, 1fr);
+          grid-template-rows: 400px auto 0px;
+          border-radius: 10px;
+          width: 650px;
+          overflow: hidden;
+          margin: auto;
+        }
+        .profile-bigimg .profile__image {
+          grid-column: span 3;
+        }
+        .profile-bigimg .profile__info {
+          grid-column: span 2;
+          align-self: center;
+          padding: 20px 10px 20px 25px;
+        }
+        .profile-bigimg .profile__info h3 {
+          margin-bottom: 0;
+        }
+        .profile-bigimg .profile__info__extra {
+          max-height: 0;
+          overflow: hidden;
+          opacity: 0;
+          transition: max-height 0.3s ease, opacity 0.3s ease 0.3s, margin 0.3s ease;
+        }
+        .profile-bigimg:hover .profile__info__extra {
+          display: block;
+          max-height: 200px;
+          margin: 10px 0 0;
+          opacity: 1;
+        }
+
+        .ny-cu {
+          display: grid;
+          grid-gap: 30px;
+          grid-template-columns: repeat(6, auto);
+          grid-template-rows: repeat(4, auto);
+          width: 550px;
+          justify-content: center;
+        }        
      </style>
 </head>  
 <body>
@@ -132,14 +201,39 @@
 <div class="container">
   <h2>Our  Partners</h2>
    <section class="customer-logos slider">
-      <div class="slide"><img src="https://image.freepik.com/free-vector/luxury-letter-e-logo-design_1017-8903.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/3d-box-logo_1103-876.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/blue-tech-logo_1103-822.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/colors-curl-logo-template_23-2147536125.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/abstract-cross-logo_23-2147536124.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/football-logo-background_1195-244.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/background-of-spots-halftone_1035-3847.jpg"></div>
-      <div class="slide"><img src="https://image.freepik.com/free-vector/retro-label-on-rustic-background_82147503374.jpg"></div>
+      <div class="slide">
+          <div class="ny-cu">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/567707/dog.png" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="slide">
+          <div class="ny-cu">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/567707/dog.png" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
+      </div>
+      <div class="slide">
+          <div class="ny-cu">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/567707/dog.png" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
+      </div> 
    </section>
 </div>
   <script type="text/javascript">
