--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
       </div> 
    </section>
 </div>
-  <!--script type="text/javascript">
+  <script type="text/javascript">
     $(document).ready(function(){
         $('.customer-logos').slick({
             slidesToShow: 2,
@@ -259,6 +259,6 @@
             }]
         });
     });
-  </script-->
+  </script>
 </body>  
 </html>
