--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta charset='UTF-8'/>
-    <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
-    <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, content-fix=cover">
     <script src="/js/jquery/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="/js/slick/slick.js"></script>
     <script src="/js/bootstrap/bootstrap.min.js"></script>
