--- a/index.html
+++ b/index.html
@@ -213,6 +213,17 @@
 <div class="container">
   <h2>Our  Partners</h2>
    <section class="customer-logos slider">
+      <!--div class="slide">
+          <div class="ny-cu">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
+      </div-->
       <div class="slide">
           <div class="ny-cu">
             <div class="profile profile-bigimg">
@@ -224,7 +235,7 @@
             </div>
           </div>
       </div>
-      <div class="slide">
+       <div class="slide">
           <div class="ny-cu">
             <div class="profile profile-bigimg">
               <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
@@ -235,7 +246,7 @@
             </div>
           </div>
       </div>
-      <div class="slide">
+       <div class="slide">
           <div class="ny-cu">
             <div class="profile profile-bigimg">
               <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
@@ -245,7 +256,34 @@
               </div>
             </div>
           </div>
-      </div> 
+      </div>
+          <div class="ny-cu slide">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
+          <div class="ny-cu slide">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
+           <div class="ny-cu slide">
+            <div class="profile profile-bigimg">
+              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
+              <div class="profile__info">
+                <h3>Doggo Dogg</h3>
+                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
+              </div>
+            </div>
+          </div>
    </section>
 </div>
   <script type="text/javascript">
