--- a/index.html
+++ b/index.html
@@ -3,210 +3,7 @@
     <meta charset='UTF-8'/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, content-fix=cover">
-    <script src="/js/jquery/jquery-2.2.0.min.js" type="text/javascript"></script>
-    <script src="/js/slick/slick.js"></script>
-    <script src="/js/bootstrap/bootstrap.min.js"></script>
-    <link href="/css/bootstrap/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-    <style>
-      h2{
-          text-align:center;
-          padding: 20px;
-        }
-        /* Slider */
-
-        .slick-slide {
-            margin: 0px 20px;
-        }
-
-        .slick-slide img {
-            width: 100%;
-        }
-
-        .slick-slider
-        {
-            position: relative;
-            display: block;
-            box-sizing: border-box;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-                    user-select: none;
-            -webkit-touch-callout: none;
-            -khtml-user-select: none;
-            -ms-touch-action: pan-y;
-                touch-action: pan-y;
-            -webkit-tap-highlight-color: transparent;
-        }
-
-        .slick-list
-        {
-            position: relative;
-            display: block;
-            overflow: hidden;
-            margin: 0;
-            padding: 0;
-        }
-        .slick-list:focus
-        {
-            outline: none;
-        }
-        .slick-list.dragging
-        {
-            cursor: pointer;
-            cursor: hand;
-        }
-
-        .slick-slider .slick-track,
-        .slick-slider .slick-list
-        {
-            -webkit-transform: translate3d(0, 0, 0);
-               -moz-transform: translate3d(0, 0, 0);
-                -ms-transform: translate3d(0, 0, 0);
-                 -o-transform: translate3d(0, 0, 0);
-                    transform: translate3d(0, 0, 0);
-        }
-
-        .slick-track
-        {
-            position: relative;
-            top: 0;
-            left: 0;
-            display: block;
-        }
-        .slick-track:before,
-        .slick-track:after
-        {
-            display: table;
-            content: '';
-        }
-        .slick-track:after
-        {
-            clear: both;
-        }
-        .slick-loading .slick-track
-        {
-            visibility: hidden;
-        }
-
-        .slick-slide
-        {
-            display: none;
-            float: left;
-            height: 100%;
-            min-height: 1px;
-        }
-        [dir='rtl'] .slick-slide
-        {
-            float: right;
-        }
-        .slick-slide img
-        {
-            display: block;
-        }
-        .slick-slide.slick-loading img
-        {
-            display: none;
-        }
-        .slick-slide.dragging img
-        {
-            pointer-events: none;
-        }
-        .slick-initialized .slick-slide
-        {
-            display: block;
-        }
-        .slick-loading .slick-slide
-        {
-            visibility: hidden;
-        }
-        .slick-vertical .slick-slide
-        {
-            display: block;
-            height: auto;
-            border: 1px solid transparent;
-        }
-        .slick-arrow.slick-hidden {
-            display: none;
-        }
-
-        * {
-          box-sizing: border-box;
-        }
-        .profile {
-          max-width:max-content;
-          display: block;
-          background: var(--backgroundColor);
-          color: var(--foregroundColor);
-          box-shadow: 0 3px 15px rgba(51, 51, 51, 0.2);
-          border-radius: 10px;
-          transition: 0.2s ease;
-        }
-        .profile__image img {
-          display: block;
-          width: 100%;
-          max-width: 100%;
-          height: 100%;
-          object-fit: cover;
-          vertical-align: middle;
-        }
-        .profile a:hover {
-          top: 0;
-          box-shadow: none;
-          background: var(--primaryShade4);
-        }
-        .profile a:active, .profile a:focus {
-          top: 0;
-          box-shadow: none;
-          background: var(--primaryShade5);
-        }
-        .profile-bigimg {
-          position: relative;
-          display: grid;
-          grid-template-columns: repeat(3, 1fr);
-          grid-template-rows: 400px auto 0px;
-          border-radius: 10px;
-          width: 100%;
-          overflow: hidden;
-          margin: auto;
-        }
-        .profile-bigimg .profile__image {
-          grid-column: span 3;
-        }
-        .profile-bigimg .profile__info {
-          grid-column: span 2;
-          align-self: center;
-          padding: 20px 10px 20px 25px;
-        }
-        .profile-bigimg .profile__info h3 {
-          margin-bottom: 0;
-        }
-        .profile-bigimg .profile__info__extra {
-          max-height: 0;
-          overflow: hidden;
-          opacity: 0;
-          transition: max-height 0.3s ease, opacity 0.3s ease 0.3s, margin 0.3s ease;
-        }
-        .profile-bigimg:hover .profile__info__extra {
-          display: block;
-          max-height: 200px;
-          margin: 10px 0 0;
-          opacity: 1;
-        }
-
-        .ny-cu {
-          position:relative;
-          display: grid;
-          grid-gap: 15px;
-          grid-template-columns: repeat(6, auto);
-          grid-template-rows: repeat(4, auto);
-          flex-direction: column;
-          width: 100%;
-          height:100%;
-          max-width: max-content;
-          justify-content: center;
-        }        
-     </style>
+    <link href="/main.css" rel="stylesheet"/>
 </head>  
 <body>
 
