--- a/index.html
+++ b/index.html
@@ -6,106 +6,9 @@
     <link href="/main.css" rel="stylesheet"/>
 </head>  
 <body>
-
-<div class="container">
-  <h2>Our  Partners</h2>
-   <section class="customer-logos slider">
-      <!--div class="slide">
-          <div class="ny-cu">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-      </div-->
-      <div class="slide">
-          <div class="ny-cu">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-      </div>
-       <div class="slide">
-          <div class="ny-cu">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-      </div>
-       <div class="slide">
-          <div class="ny-cu">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-      </div>
-          <div class="ny-cu slide">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-          <div class="ny-cu slide">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-           <div class="ny-cu slide">
-            <div class="profile profile-bigimg">
-              <div class="profile__image"><img src="https://i.pinimg.com/236x/ce/64/8d/ce648d33d6b765eb1044a8385da6fed6.jpg" alt="Doggo"/></div>
-              <div class="profile__info">
-                <h3>Doggo Dogg</h3>
-                <p class="profile__info__extra">A very good boi that loves playing fetch and ice-cream! Gentle with everyone. Scared of the rain.</p>
-              </div>
-            </div>
-          </div>
-   </section>
-</div>
-  <script type="text/javascript">
-    $(document).ready(function(){
-        $('.customer-logos').slick({
-            slidesToShow: 2,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 3000,
-            arrows: false,
-            dots: false,
-            pauseOnHover: false,
-            responsive: [{
-                breakpoint: 768,
-                settings: {
-                    slidesToShow: 4
-                }
-            }, {
-                breakpoint: 520,
-                settings: {
-                    slidesToShow: 3
-                }
-            }]
-        });
-    });
-  </script>
+    <div id="app"></div>
+    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
+    <script src='https://unpkg.com/react@16/umd/react.production.min.js'></script>
+    <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
 </body>  
 </html>
