--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
     <script src='https://unpkg.com/react@16/umd/react.production.min.js'></script>
     <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
+    <script scr="/main.js"></script>
 </body>  
 </html>
