--- a/index.html
+++ b/index.html
@@ -8,10 +8,26 @@
     <link href="/main.css" rel="stylesheet"/>
 </head>  
 <body>
-    <div id="app"></div>
-    <script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
-    <script src='https://unpkg.com/react@16/umd/react.production.min.js'></script>
-    <script src='https://unpkg.com/react-dom@16/umd/react-dom.production.min.js'></script>
+    <div id="drag-container">
+      <div id="spin-container">
+        <img src="https://your-crush.vercel.app./img/img1.jpg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img2.jpg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img3.jpg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img4.jpg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img5.jpeg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img6.jpg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img7.jpg" alt="" />
+        <img src="https://your-crush.vercel.app./img/img8.jpg" alt="" />
+
+        <p>Your crush</p>
+      </div>
+      <div id="ground"></div>
+    </div>
+
+    <div id="music-container"></div>
+    <div id="canva">
+      <canvas id="canvas"></canvas>
+    </div>
     <script src="/main.js"></script>
 </body>  
 </html>
