--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="https://your-crush.vercel.app./img/img7.jpg" alt="" />
         <img src="https://your-crush.vercel.app./img/img8.jpg" alt="" />
 
-        <p>Các ck của Cuongbok</p>
+        <p>Các vk của Cuongbok</p>
       </div>
       <div id="ground"></div>
     </div>
