--- a/index.html
+++ b/index.html
@@ -8,26 +8,12 @@
     <link href="/main.css" rel="stylesheet"/>
 </head>  
 <body>
-    <div id="drag-container">
-      <div id="spin-container">
-        <img src="https://your-crush.vercel.app./img/img1.jpg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img2.jpg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img3.jpg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img4.jpg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img5.jpeg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img6.jpg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img7.jpg" alt="" />
-        <img src="https://your-crush.vercel.app./img/img8.jpg" alt="" />
-
-        <p>Các vk của Cuongbok</p>
-      </div>
-      <div id="ground"></div>
-    </div>
-
-    <div id="music-container"></div>
-    <div id="canva">
-      <canvas id="canvas"></canvas>
-    </div>
+    <div class="outer_wrapper">
+    <div class="wrapper"></div>
+  </div>
+  <div class="sign">
+    
+  </div>
     <script src="/main.js"></script>
 </body>  
 </html>
