--- a/study/11a7/sinhhoc/dac-diem-ho-hap-cac-nho-thuc-vat.html
+++ b/study/11a7/sinhhoc/dac-diem-ho-hap-cac-nho-thuc-vat.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="/./././main.css" rel="stylesheet"/>
+    <link href="./././main.css" rel="stylesheet"/>
   </head>
   <body>
    <table id="innerData">
@@ -11,6 +11,6 @@
       <td>CAM</td>
     </tr>  
    </table>
-    <script src="/./././main.js"></script>
+    <script src="./././main.js"></script>
   </body>
 </html>
