--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -5,10 +5,9 @@
   <body>
    <table id="innerData">
     <tr>
-      <td>Đặc điểm</td>
-      <td>C3</td>
-      <td>C4</td>
-      <td>CAM</td>
+      <td><b>STT</b></td>
+      <td><b>Tên</b></td>
+      <td><b>Bài làm</b></td>
     </tr>  
    </table>
     <script src="./././main.js"></script>
