--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js"></script>
     <link href="./././main.css" rel="stylesheet"/>
   </head>
   <body>
