--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -17,6 +17,9 @@
       <td><b>Bài làm</b></td>
     </tr>  
    </table>
+    <div>
+      <p id="lastUpdate">Cập nhật lần cuối: </p>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha512-+NqPlbbtM1QqiK8ZAo4Yrj2c4lNQoGv8P79DPtKzj++l5jnN39rHA/xsqn8zE9l0uSoxaCdrOgFs6yjyfbBxSg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
