--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -9,7 +9,7 @@
     <link href="./././main.css" rel="stylesheet"/>
   </head>
   <body>
-    <h3 stlye="text-align:center">Danh sách bài làm 11A7-K18 Sinh học ngày 01/12/2021 <span id="total"></span></h3>
+    <h3 stlye="text-align:center">Danh sách bài làm 11A7-K18 Sinh học ngày 01/12/2021. <span id="total"></span></h3>
    <table id="innerData">
     <tr>
       <td><b>STT</b></td>
