--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -10,12 +10,16 @@
   </head>
   <body>
     <h3 stlye="text-align:center">Danh sách bài làm 11A7-K18 Sinh học ngày 01/12/2021. <span id="total"></span></h3>
-   <table id="innerData">
-    <tr>
-      <td><b>STT</b></td>
-      <td><b>Tên</b></td>
-      <td><b>Bài làm</b></td>
-    </tr>  
+   <table>
+     <thead>
+      <tr>
+        <td><b>STT</b></td>
+        <td><b>Tên</b></td>
+        <td><b>Bài làm</b></td>
+      </tr>
+     </thead> 
+     <tbody id="innerData">
+     </tbody>  
    </table>
     <div>
       <p id="lastUpdate">Cập nhật lần cuối: </p>
