--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -13,9 +13,9 @@
    <table>
      <thead>
       <tr>
-        <td><b>STT</b></td>
-        <td><b>Tên</b></td>
-        <td><b>Bài làm</b></td>
+        <th><b>STT</b></th>
+        <th><b>Tên</b></th>
+        <th><b>Bài làm</b></th>
       </tr>
      </thead> 
      <tbody id="innerData">
