--- a/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
+++ b/study/11a7/sinhhoc/01122021-sinh-hoc-a7-k18/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h3 stlye="text-align:center">Danh sách bài làm 11A7-K18 Sinh học ngày 01/12/2021. <span id="total"></span></h3>
-    <noscript>Trình duyệt của bạn không hỗ trợ Script, vui lòng cho phép hoặc dùng trình duyệt khác</noscript>
+    <noscript><h1>Trình duyệt của bạn không hỗ trợ Script, vui lòng cho phép hoặc dùng trình duyệt khác</h1></noscript>
    <table>
      <thead>
       <tr>
