--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -154,7 +154,7 @@ h1 {
 		<h3 class="block-title">Code snippets</h3>
 			<pre>
             <code>
-            <span style="color:red">#Cuongbok</span> A7-K18 depzai: bài nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M
+#Cuongbok A7-K18 depzai: bài nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M
 def xuly(M, N): #function xuly với 2 tham số là M, N 
     if N > M: #kiểm soát M phải lớn hơn N 
         print('Xin nhập lại') #nếu N>M: in ra 'Xin nhập lại'
