--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -11,12 +11,10 @@
 html, body {
   height: 100%;
 }
-
 body {
   background-color: #1a232b;
   overflow: hidden;
 }
-
 .banner {
   width: 300px;
   height: 250px;
@@ -24,7 +22,6 @@ body {
   overflow: hidden;
   margin: 50px auto;
 }
-
 .wrapper {
   top: 50%;
   left: 50%;
@@ -32,7 +29,6 @@ body {
   width: 0;
   position: relative;
 }
-
 .box {
   transform: translate(-50%, -50%);
   position: relative;
@@ -43,7 +39,6 @@ body {
   margin-top: 5px;
   display: block;
 }
-
 button {
   display: inline-block;
   outline: none;
@@ -64,12 +59,10 @@ button:hover {
   color: #ef4657;
   text-decoration: none;
 }
-
 body {
   background-color: #f9fbfd;
   overflow: auto;
 }
-
 header {
   background-color: #262626;
   height: 80px;
@@ -78,7 +71,6 @@ header {
   align-items: center;
   justify-content: space-between;
 }
-
 a {
   text-decoration: none;
 }
@@ -87,11 +79,9 @@ a:hover, a:focus {
   outline: none;
   color: #eb172c;
 }
-
 pre a {
   color: #ef4657;
 }
-
 footer {
   background-color: #262626;
   width: 100%;
@@ -107,24 +97,20 @@ footer a {
 footer span {
   color: gray;
 }
-
 h1 {
   color: #fff;
   margin: auto;
   font-size: 1.8em;
   text-align: center;
 }
-
 .gsap-logo {
   padding-left: 15px;
 }
-
 .bannerlab-logo {
   width: 200px;
   height: 80px;
   padding-right: 15px;
 }
-
 .block-title {
   background-color: #2E3D48;
   color: #fff;
@@ -133,7 +119,6 @@ h1 {
   padding: 5px 10px;
   text-align: center;
 }
-
 @media (max-width: 1200px) {
   h1 {
     font-size: 1.5em;
@@ -145,12 +130,11 @@ h1 {
   }
 }
 </style>
-
 </head>
 
-<div class="container-fluid language-javascript">
+<div class="container-fluid language-python">
 	<div class="row">
-		<div class="col-xs-12 col-lg-6 col-xl-18">	
+		<div class="col-xs-12 col-lg-6 col-xl-9">	
 		<h3 class="block-title">Code snippets</h3>
 			<pre>
             <code>
