--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -135,7 +135,7 @@ h1 {
 <div class="container-fluid language-python">
 	<div class="row">
 		<div class="col-xs-12 col-lg-6 col-xl-9">	
-		<h3 class="block-title">Code snippets</h3>
+		<h3 class="block-title">Nhập từ bàn phím N và M (M>N) và in ra số các số chia hét cho 3 hoặc 5 trong khoảng N->M</h3>
 			<pre>
             <code>
 #Cuongbok A7-K18 depzai: bài nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M
