--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -132,7 +132,7 @@ h1 {
 </style>
 </head>
 
-<div class="container-fluid language-python">
+<div class="container-fluid language-javascript">
 	<div class="row">
 		<div class="col-xs-12 col-lg-6 col-xl-9">	
 		<h3 class="block-title">Nhập từ bàn phím N và M (M>N) và in ra số các số chia hét cho 3 hoặc 5 trong khoảng N->M</h3>
