--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -1,143 +1,149 @@
+
+
 <!DOCTYPE html>
 <html lang="en" >
 
 <head>
+
   <meta charset="UTF-8">
-  <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
-  <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/themes/prism-okaidia.css'>
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap-flex.min.css'>
+  
+<link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
+<meta name="apple-mobile-web-app-title" content="CodePen">
+
+<link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
+
+<link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-8f3771b1072e3c38bd662872f6b673a722f4b3ca2421637d5596661b4e2132cc.svg" color="#111" />
+
+
+  <title>CodePen - Code Snippets Animation</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/dracula.min.css'>
+  
 <style>
-html, body {
-  height: 100%;
+body, html {
+  background: #F3F5FF;
+  font-family: "Roboto", sans-serif;
 }
-body {
-  background-color: #1a232b;
-  overflow: hidden;
+
+* {
+  box-sizing: border-box;
 }
-.banner {
-  width: 300px;
-  height: 250px;
-  border: 1px solid #fff;
-  overflow: hidden;
-  margin: 50px auto;
-}
-.wrapper {
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 0;
+
+.Container {
+  width: 500px;
+  border-radius: 6px;
   position: relative;
+  background: #282B36;
+  margin: 60px auto 0 auto;
+  box-shadow: 0 10px 40px 0 rgba(40, 43, 54, 0.3);
 }
-.box {
-  transform: translate(-50%, -50%);
-  position: relative;
-  background-color: #ef4657;
-  width: 100px;
-  height: 20px;
-  border-radius: 5px;
-  margin-top: 5px;
-  display: block;
+.Container nav {
+  top: 15px;
+  left: 15px;
+  position: absolute;
 }
-button {
-  display: inline-block;
-  outline: none;
-  border: none;
-  background-color: #ef4657;
-  color: #fff;
-  text-decoration: none;
-  margin: 0 auto;
-  border-radius: 4px;
-  padding: 12px 25px;
-  text-transform: uppercase;
-  font-weight: 600;
-  cursor: pointer;
+.Container nav a {
+  z-index: 2;
+  color: #A5AAAF;
   font-size: 13px;
-}
-button:hover {
-  background-color: #fff;
-  color: #ef4657;
-  text-decoration: none;
-}
-body {
-  background-color: #f9fbfd;
-  overflow: auto;
-}
-header {
-  background-color: #262626;
-  height: 80px;
-  margin-bottom: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-a {
-  text-decoration: none;
-}
-a:hover, a:focus {
-  text-decoration: none;
-  outline: none;
-  color: #eb172c;
-}
-pre a {
-  color: #ef4657;
-}
-footer {
-  background-color: #262626;
-  width: 100%;
-  height: 50px;
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-footer a {
-  color: slategray;
-}
-footer span {
-  color: gray;
-}
-h1 {
-  color: #fff;
-  margin: auto;
-  font-size: 1.8em;
-  text-align: center;
-}
-.gsap-logo {
-  padding-left: 15px;
-}
-.bannerlab-logo {
-  width: 200px;
-  height: 80px;
-  padding-right: 15px;
-}
-.block-title {
-  background-color: #2E3D48;
-  color: #fff;
-  font-size: 20px;
+  padding: 5px 8px;
   border-radius: 4px;
-  padding: 5px 10px;
+  display: inline-block;
+  text-decoration: none;
+}
+.Container nav a:hover, .Container nav a.active {
+  color: white;
+}
+.Container nav .current {
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 40px;
+  height: 22px;
+  border-radius: 3px;
+  position: absolute;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
+.Container .Contents {
+  width: 100%;
+  display: flex;
+  overflow: hidden;
+  align-items: flex-start;
+}
+
+.Container .Content {
+  width: 100%;
+  flex-shrink: 0;
+  color: #FFFFFF;
+  font-size: 15px;
+  line-height: 24px;
+  padding: 60px 30px 30px 30px;
+}
+.Container .Content .hljs {
+  padding: 0;
+  font-size: 13px;
+  line-height: 24px;
+  font-family: Consolas, Monaco, monospace;
+}
+
+.hljs-number {
+  color: #FFC24C;
+}
+
+.credit {
+  left: 50%;
+  bottom: 30px;
+  width: 300px;
+  position: fixed;
   text-align: center;
+  margin-left: -150px;
 }
-@media (max-width: 1200px) {
-  h1 {
-    font-size: 1.5em;
-  }
+.credit p {
+  color: #6C738B;
+  font-size: 13px;
+  font-weight: 300;
+  line-height: 20px;
 }
-@media (max-width: 700px) {
-  h1 {
-    font-size: 1.2em;
-  }
+.credit p a {
+  color: #32325D;
+  font-weight: 400;
+  text-decoration: none;
+}
+.credit p a:hover {
+  color: #5C33FF;
 }
 </style>
+
+  <script>
+  window.console = window.console || function(t) {};
+</script>
+
+  
+  
+  <script>
+  if (document.location.search.match(/type=embed/gi)) {
+    window.parent.postMessage("resize", "*");
+  }
+</script>
+
+
 </head>
 
-<div class="container-fluid language-javascript">
-	<div class="row">
-		<div class="col-xs-12 col-lg-6 col-xl-9">	
-		<h3 class="block-title">Nhập từ bàn phím N và M (M>N) và in ra số các số chia hét cho 3 hoặc 5 trong khoảng N->M</h3>
-			<pre>
-            <code>
+<body translate="no" >
+  <div class="Container">
+  <nav>
+    <div class="current"></div>
+    <a href="#one" class="active">Python</a>
+    <a href="#two">Ruby</a>
+    <a href="#three">Node</a>
+    <a href="#four">Go</a>
+  </nav>
+  <div class="Contents">
+    <div class="Content" id="one">
+    <pre class="python"><code>
 #Cuongbok A7-K18 depzai: bài nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M
 def xuly(M, N): #function xuly với 2 tham số là M, N 
     if N > M: #kiểm soát M phải lớn hơn N 
@@ -154,18 +160,109 @@ def getInput(): #function getInput để lấy dữ liệu từ bàn phím
     M = int(input('Nhập M= (M>N)'))
     xuly(M, N) #chạy chương trình xuly(M, N) với 2 tham số đã nhận từ bàn phím là N và M.
 getInput()#chạy chương trình getInput() để bắt đầu.
-
-
-</code>
-</pre>
+    </code></pre>
+    
+  </div>
+  <div class="Content" id="two">
+    <pre><code>Không có code</code></pre>
+  </div>
+  <div class="Content" id="three">
+    <pre><code>Không có code</code></pre>
+  </div>
+  <div class="Content" id="four">
+    <pre><code>Không có code</code></pre>
+  </div>
+  </div>
 </div>
-</div>
-</div>
 
-  
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/prism/1.6.0/prism.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js'></script>
+<div class="credit">
+  <p>Hỗ trợ bởi: <a href="https://stripe.com/docs/api#create_charge" target="_blank">incredible documentation</a></p>
+</div>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
 
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/ruby.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/python.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/go.min.js'></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/javascript.min.js'></script>
+      <script id="rendered-js" >
+hljs.initHighlightingOnLoad();
+
+const scrollView = document.querySelector('.Container .Contents');
+const tabs = document.querySelectorAll('.Container .Contents .Content');
+const nav = document.querySelectorAll('.Container nav a');
+const currentNav = document.querySelector('.Container nav .current');
+let currentTab = 0;
+
+currentNav.style.width = `${nav[currentTab].clientWidth}px`;
+scrollView.style.height = `${tabs[currentTab].clientHeight}px`;
+
+nav.forEach(link => {
+  link.addEventListener('click', e => {
+    e.preventDefault();
+    const index = Array.prototype.indexOf.call(nav, e.target);
+    if (currentTab === index) return;
+    animateToTab(index);
+  });
+});
+
+const animateToTab = index => {
+  const el = tabs[index];
+  const scrollStart = scrollView.scrollLeft;
+  const startHeight = scrollView.clientHeight;
+  nav[currentTab].classList.remove('active');
+  nav[index].classList.add('active');
+
+  const time = {
+    start: performance.now(),
+    duration: 700 };
+
+
+  const tick = now => {
+    time.elapsed = now - time.start;
+    const fadeOut = easeInOutCubic(time.elapsed, 1, -1, time.duration);
+    const fadeIn = easeInOutCubic(time.elapsed, 0, 1, time.duration);
+    const offset = easeInOutCubic(time.elapsed, scrollStart, el.offsetLeft - scrollStart, time.duration);
+    const height = easeInOutCubic(time.elapsed, startHeight, el.clientHeight - startHeight, time.duration);
+
+    const navOffset = easeInOutCubic(
+    time.elapsed,
+    nav[currentTab].offsetLeft,
+    nav[index].offsetLeft - nav[currentTab].offsetLeft,
+    time.duration);
+
+
+    const indicatorWidth = easeInOutCubic(
+    time.elapsed,
+    nav[currentTab].clientWidth,
+    nav[index].clientWidth - nav[currentTab].clientWidth,
+    time.duration);
+
+
+    currentNav.style.transform = `translateX(${navOffset}px)`;
+    currentNav.style.width = `${indicatorWidth}px`;
+
+    tabs[currentTab].style.opacity = fadeOut;
+    tabs[index].style.opacity = fadeIn;
+    scrollView.scrollLeft = offset;
+    scrollView.style.height = `${height}px`;
+
+    if (time.elapsed < time.duration) {
+      requestAnimationFrame(tick);
+    } else {
+      currentTab = index;
+    }
+  };
+
+  requestAnimationFrame(tick);
+};
+
+var easeInOutCubic = (t, b, c, d) => {
+  if ((t /= d / 2) < 1) return c / 2 * t * t * t + b;
+  return c / 2 * ((t -= 2) * t * t + 2) + b;
+};
+    </script>
+</body>
 
 </html>
  
