--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -108,7 +108,7 @@ body, html {
     <a href="#one" class="active">Python</a>
     <a href="#two">Ruby</a>
     <a href="#three">Node</a>
-    <a href="#four">Go</a>
+    <a href="#four">Js</a>
   </nav>
   <div class="Contents">
     <div class="Content" id="one">
