--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
   <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
+  <title>Python: Nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/dracula.min.css'>
