--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -96,6 +96,11 @@ body, html {
 .credit p a:hover {
   color: #5C33FF;
 }
+@media screen and (max-width:640px){
+  .Container {
+    width: 100%;
+  }
+}
 </style>
 </head>
 <body translate="no" >
