--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -147,6 +147,7 @@ getInput()#chạy chương trình getInput() để bắt đầu.
 </div>
 
 <div class="credit">
+  <p><a href="//cuongbokit.blogspot.com" target="_blank">2021 by NSND Cuongbok</a></p>
   <p>Hỗ trợ bởi: <a href="https://stripe.com/docs/api#create_charge" target="_blank">incredible documentation</a></p>
 </div>
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="https://cpwebassets.codepen.io/assets/common/stopExecutionOnTimeout-1b93190375e9ccc259df3a57c1abc0e64599724ae30d7ea4c6877eb615f89387.js"></script>
@@ -156,7 +157,7 @@ getInput()#chạy chương trình getInput() để bắt đầu.
 <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/python.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/go.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/languages/javascript.min.js'></script>
-      <script id="rendered-js" >
+<script>
 hljs.initHighlightingOnLoad();
 
 const scrollView = document.querySelector('.Container .Contents');
