--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -5,6 +5,10 @@
   <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
   <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
   <title>Python: Nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M</title>
+  <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/>
+  <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='152x152'/>
+  <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
+  <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='shortcut icon' type='image/x-icon'/>
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/dracula.min.css'>
