--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -5,6 +5,7 @@
   <meta content='width=device-width, initial-scale=1, user-scalable=1, minimum-scale=1, maximum-scale=5' name='viewport'/>
   <meta content='IE=edge' http-equiv='X-UA-Compatible'/>
   <title>Python: Nhập N, M (M>N) rồi lấy số các số chia hết cho 3 hoặc 5 trong khoảng N -> M</title>
+  <meta property="og:image" content="https://i.imgur.com/YoxOCZD.png"/>
   <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='120x120'/>
   <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='apple-touch-icon' sizes='152x152'/>
   <link href='https://cuongbokit.blogspot.com/favicon.ico' rel='icon' type='image/x-icon'/>
