--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -80,8 +80,9 @@ body, html {
   color: #FFC24C;
 }
 .credit {
+  display: block;
   left: 50%;
-  bottom: 30px;
+  top: 12px;
   width: 300px;
   position: fixed;
   text-align: center;
