--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -160,7 +160,7 @@ getInput()#chạy chương trình getInput() để bắt đầu.
   <a id="openTestCode" onclick="test_code(open)" href="#test_code">Thử code này</a>
 <div id="test_code">
   <h4>Thử code:</h4>
-<iframe id="frame_code" src="https://www.online-python.com/OcP8wGUZ2j"/>  
+<iframe id="frame_code" src="https://www.online-python.com/OcP8wGUZ2j">  </iframe>
 </div>
 <div class="credit">
   <p><a href="//cuongbokit.blogspot.com" target="_blank">2021 by NSND Cuongbok</a></p>
