--- a/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
+++ b/documents/code/python/SoChiaHetCho3Hoac5TrongKhoangNDenM/index.html
@@ -108,7 +108,7 @@ body, html {
   }
 }
 #test_code{display:none}
-#frame_code{height: 600px;width: 100%;}
+#frame_code{height: 600px;width: 100%;margin-top:15px;}
 </style>
 </head>
 <body translate="no" >
@@ -157,7 +157,7 @@ getInput()#chạy chương trình getInput() để bắt đầu.
   </div>
   </div>
 </div>
-  <a id="openTestCode" onclick="open_test_code()" href="#test_code">Thử code này</a>
+  <a id="openTestCode" onclick="open_test_code()" href="#openTestCode">Thử code này</a>
 <div id="test_code">
   <h4>Thử code:</h4>
 <iframe id="frame_code" src="https://www.online-python.com/OcP8wGUZ2j">  </iframe>
